Fixed spacing between buttons in "You win" screen in small devices

--- a/static/2048/style/main.scss
+++ b/static/2048/style/main.scss
@@ -622,5 +622,9 @@ hr {
     .lower {
       margin-top: 30px !important;
     }
+    
+    #save-score-button {
+      margin-top: 9px;
+    }
   }
 }
